Changed stuff after codereview and added task

--- a/web/modules/custom/ai_screening_fixtures_base/assets/texts/filteredHtml1.html
+++ b/web/modules/custom/ai_screening_fixtures_base/assets/texts/filteredHtml1.html
@@ -8,7 +8,7 @@
     <li>ccc</li>
   </ul>
 </p>
-<p><a href="https://aarhus.dk">Til Aarhus</a></p>
+<p><a href="https://youtube.com">Til Youtube</a></p>
 <p>
   <ol>
     <li>aaa</li>
